[workspace]
members = [
    "standalone",
    "tmm",
    "worker"
]

[workspace.dependencies]
poe-api = { git = "https://github.com/Dav1dde/poe-rs/", rev = "ab3a60a", default-features = false }
worker = { git = "https://github.com/Dav1dde/workers-rs.git", rev = "48e29cd", package = "worker" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
axum = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
elegant-departure = { version = "0.2", features = ["tokio"] }

askama = "0.12"

anyhow = "1"
base64 = "0.21"
cfg-if = "1"
strum = { version = "0.24", features = ["derive"] }
bpaf = { version = "0.7", features = ["derive"] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3 # switch back to "s" or "z" when hitting the worker limit
lto = true
