[package]
name = "tmm"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"

[features]

[dependencies]
poe-api = { git = "https://github.com/Dav1dde/poe-rs/", rev = "619a8b3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
strum = { version = "0.25", features = ["derive"] }
bpaf = { version = "0.9", features = ["derive"] }
toml = "0.8"
ureq = "2"
