[package]
name = "standalone"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"

[[bin]]
name = "tmm"
path = "src/main.rs"

[dependencies]
tmm = { path = "../tmm/", features = ["serde"] }

tokio = { version = "1", features = ["full"] }
axum = "0.6"

serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
elegant-departure = { version = "0.2", features = ["tokio"] }
bpaf = { version = "0.6", features = ["derive"] }
