[package]
name = "standalone"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"

[[bin]]
name = "tmm"
path = "src/main.rs"

[dependencies]
tmm = { path = "../tmm/", features = ["serde"] }

tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
elegant-departure.workspace = true

serde.workspace = true

bpaf.workspace = true
