[package]
name = "tmm"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"
build = "build/build.rs"

[features]
default = ["tree-3_15", "tree-3_16", "tree-3_17", "tree-3_18", "tree-3_19", "tree-3_20", "tree-3_21"]
tree-3_15 = []
tree-3_16 = []
tree-3_17 = []
tree-3_18 = []
tree-3_19 = []
tree-3_20 = []
tree-3_21 = []

[dependencies]
askama.workspace = true
base64.workspace = true
cfg-if.workspace = true
serde = { workspace = true, optional = true }

[build-dependencies]
poe-api.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
strum.workspace = true
