[package]
name = "worker-app"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = []

[dependencies]
cfg-if = "0.1.2"
worker = { git = "https://github.com/Dav1dde/workers-rs.git", rev = "5a24cc5d", package = "worker" }
tmm = { path = "../tmm/" }
anyhow = "1"
